@@ -15,6 +15,9 @@ jsoup changelog
     content if they have not set it, but still in sensible bounds. Also updated the default user-agent to improve
     default compatibility.
 
+  * Improvement: dramatic speed improvement when bulk inserting child nodes into an element (wrapping contents).
+    <https://github.com/jhy/jsoup/issues/1281>
+
   * Bugfix: on pages fetch by Jsoup.Connection, a "Mark Invalid" exception might be incorrectly thrown, or the page may
     miss some data. This occurred on larger pages when the file transfer was chunked, and an invalid HTML entity
     happened to cross a chunk boundary.
